// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Avatar Avatar 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: rgb(244,244,250);
  color: #98989E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 20px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="avatar"
    >
      <div
        class="c1"
        data-testid="avatar-initials"
        size="40"
      >
        C
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Badge Badge 1`] = `
.c1 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 10px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: center;
  line-height: 10px;
}

.c0 {
  border: 1px solid #F2F2F9;
  color: #F2F2F9;
  border-radius: 20px;
  padding: 0px 10px;
  box-sizing: border-box;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: lowercase;
}

.c0 *:first-letter {
  text-transform: uppercase;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
        color="light"
        data-testid="badge-text"
        font-size="10px"
        font-style="normal"
        role=""
      >
        text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button/Default Default 1`] = `
.c0 {
  position: relative;
  background-color: #5C37CC;
  border: none;
  border-radius: 4px;
  color: #FFF;
  font-size: 10px;
  height: 40px;
  line-height: 40px;
  font-weight: bold;
  padding: 0 33px;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <button
      class="c0"
      data-testid="button-default-undefined"
      type="button"
    >
      text
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Button/Rounded Rounded 1`] = `
.c1 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: bold;
  color: #98989E;
  text-align: left;
  line-height: 12px;
}

.c0 {
  border: none;
  background: rgb(44,44,46);
  height: 50px;
  border-radius: 30px;
  height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 33px;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover {
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0 > * + * {
  margin-left: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <button
      class="c0"
      data-testid="button-iconRounded-undefined"
      type="button"
    >
      <span
        class="c1"
        color="dark"
        font-size="12px"
        font-style="normal"
        role=""
      >
        text
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Base Base 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      color="gray"
    >
      ...
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Body Body 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

.c1 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      color="gray"
    >
      <div
        class="c1"
      >
        body
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Config Config 1`] = `
.c7 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
}

.c0 > * + * {
  margin-top: 10px;
}

.c5 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #5C37CC;
}

.c6 > :not(:first-child) {
  margin-top: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <i
            class="c4"
            color="light"
            data-testid="icon-workspace"
          >
            <div>
              <div>
                <svg
                  src="workspace"
                />
              </div>
            </div>
          </i>
        </div>
      </div>
      <div
        class="c5 c6"
      >
        <span
          class="c7"
          color="light"
          font-size="14px"
          font-style="normal"
          role=""
        />
        ...
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Expand Expand 1`] = `
.c7 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
}

.c0 > * + * {
  margin-top: 10px;
}

.c5 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c8 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
  cursor: pointer;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #5C37CC;
}

.c6 > :not(:first-child) {
  margin-top: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <i
            class="c4"
            color="light"
            data-testid="icon-undefined"
          />
        </div>
      </div>
      <div
        class="c5 c6"
      >
        <span
          class="c7"
          color="light"
          font-size="14px"
          font-style="normal"
          role=""
        />
        <div
          class="c8"
        >
          click here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Header Header 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

.c1 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > * + * {
  margin-left: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      color="gray"
    >
      <div
        class="c1"
      >
        header
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Main Main 1`] = `
.c3 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 12px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: dark;
}

.c0 > * + * {
  margin-top: 10px;
}

.c2 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c5 {
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-top: 10px;
}

.c5:only-child {
  margin-top: 0;
}

.c6 {
  margin-top: 10px;
}

.c1 {
  background-color: rgb(44,44,46);
}

.c1:hover .sc-iemWCZ,
.c1:hover .c4 {
  white-space: normal;
  overflow: auto;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0 c1"
      color="dark"
      data-testid="card-main"
    >
      <div
        class="c2"
      >
        <span
          class="c3 c4 c5"
          color="light"
          font-size="12px"
          font-style="normal"
          role=""
        />
        <div
          class="c6"
        >
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Release Release 1`] = `
.c6 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 10px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: center;
  line-height: 10px;
}

.c9 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c5 {
  border: 1px solid #F2F2F9;
  color: #F2F2F9;
  border-radius: 20px;
  padding: 0px 10px;
  box-sizing: border-box;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: lowercase;
}

.c5 *:first-letter {
  text-transform: uppercase;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0 > * + * {
  margin-top: 10px;
}

.c7 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #10AA80;
}

.c1:hover .{
  white-space: normal;
  overflow: visible;
}

.c8 .{
  width: 235px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <i
            class="c4"
            color="light"
            data-testid="icon-info"
          >
            <div>
              <div>
                <svg
                  src="info"
                />
              </div>
            </div>
          </i>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
            color="light"
            data-testid="badge-Deployed"
            font-size="10px"
            font-style="normal"
            role=""
          >
            Deployed
          </span>
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <span
          class="c9 "
          color="light"
          data-testid="release-card-description"
          font-size="14px"
          font-style="normal"
          role=""
        >
          ...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Chart Chart 1`] = `
.c0 {
  padding-right: 15px;
}

.c0 .apexcharts-canvas,
.c0 .apexcharts-canvas.apexcharts-theme-dark {
  background-color: transparent;
}

.c0 .apexcharts-xaxis-tick {
  display: none;
}

.c0 .apexcharts-yaxistooltip {
  display: none;
}

.c0 .apexcharts-xaxistooltip {
  display: none;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="apexcharts-mock"
      height="200"
      options="[object Object]"
      series="[object Object]"
      type="area"
      width="500"
    >
      <div>
        <svg>
          <g
            class="apexcharts-yaxis"
          >
            <g>
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
              <text
                class="apexcharts-yaxis-label"
              />
            </g>
          </g>
          <g
            class="apexcharts-xaxis"
          >
            <g>
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
              <text
                class="apexcharts-xaxis-label"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/CheckPassword CheckPassword 1`] = `
.c2 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: #98989E;
  text-align: left;
  line-height: 12px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #98989E;
  width: 14px;
  height: 14px;
}

.c1 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 svg {
  width: 14px;
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 5px;
}

.c0 > :first-child {
  margin-right: 5px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      data-testid="check-password"
    >
      <div
        class="c0"
      >
        <i
          class="c1"
          color="dark"
          data-testid="icon-close"
        >
          <div>
            <div>
              <svg
                src="close"
              />
            </div>
          </div>
        </i>
        <span
          class="c2"
          color="dark"
          font-size="12px"
          font-style="normal"
          role=""
        >
          Uppercase
        </span>
      </div>
      <div
        class="c0"
      >
        <i
          class="c1"
          color="dark"
          data-testid="icon-close"
        >
          <div>
            <div>
              <svg
                src="close"
              />
            </div>
          </div>
        </i>
        <span
          class="c2"
          color="dark"
          font-size="12px"
          font-style="normal"
          role=""
        >
          Lowercase
        </span>
      </div>
      <div
        class="c0"
      >
        <i
          class="c1"
          color="dark"
          data-testid="icon-close"
        >
          <div>
            <div>
              <svg
                src="close"
              />
            </div>
          </div>
        </i>
        <span
          class="c2"
          color="dark"
          font-size="12px"
          font-style="normal"
          role=""
        >
          Numbers
        </span>
      </div>
      <div
        class="c0"
      >
        <i
          class="c1"
          color="dark"
          data-testid="icon-close"
        >
          <div>
            <div>
              <svg
                src="close"
              />
            </div>
          </div>
        </i>
        <span
          class="c2"
          color="dark"
          font-size="12px"
          font-style="normal"
          role=""
        >
          Special Character
        </span>
      </div>
      <div
        class="c0"
      >
        <i
          class="c1"
          color="dark"
          data-testid="icon-close"
        >
          <div>
            <div>
              <svg
                src="close"
              />
            </div>
          </div>
        </i>
        <span
          class="c2"
          color="dark"
          font-size="12px"
          font-style="normal"
          role=""
        >
          Minimum 10 and max of 100 characters
        </span>
      </div>
      <div
        class="c0"
      >
        <i
          class="c1"
          color="dark"
          data-testid="icon-close"
        >
          <div>
            <div>
              <svg
                src="close"
              />
            </div>
          </div>
        </i>
        <span
          class="c2"
          color="dark"
          font-size="12px"
          font-style="normal"
          role=""
        >
          Confirm password
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/Dropdown Dropdown 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #98989E;
  width: 15px;
  height: 15px;
  background: none;
  border: none;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  padding: 0;
}

.c1 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 svg {
  width: 15px;
  height: 15px;
}

.c0 {
  position: relative;
  width: auto;
  height: auto;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="dropdown"
    >
      <i
        class="c1 dropdown-icon"
        color="dark"
        data-testid="icon-vertical-dots"
      >
        <div>
          <div>
            <svg
              src="vertical-dots"
            />
          </div>
        </div>
      </i>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/DropdownItem DropdownItem 1`] = `
.c1 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: #98989E;
  text-align: left;
  line-height: 12px;
}

.c0 {
  color: #98989E;
  cursor: pointer;
  border: none;
  background: transparent;
  height: 34px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  background: #3A3A3C;
}

.c0 > * + * {
  margin-left: 5px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <button
      class="c0"
      data-testid="dropdown-item-undefined-action"
    >
      <span
        class="c1 "
        color="dark"
        font-size="12px"
        font-style="normal"
        role=""
      >
        action
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Editor Editor 1`] = `
.c0 {
  position: relative;
  width: 400px;
  height: 200px;
  margin-top: 20px;
  border-radius: 4px;
  color: #C7C7D4;
  background-color: rgb(44,44,46);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:first-child {
  margin-top: 10px;
}

.c2 .property {
  color: #30D158;
}

.c2 .operator {
  color: #FFF;
}

.c2 .punctuation {
  color: rgb(244,244,250);
}

.c2 .string {
  color: #C7C7D4;
}

.c3 {
  min-width: 35px;
  width: 35px;
  text-align: right;
  color: #C7C7D4;
  border-right: 1px solid #3A3A3C;
  margin: 0 5px 0 0;
  padding: 0 10px 0 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: calc(100% - 54px);
  height: calc(100% - 20px);
  background: none;
  color: transparent;
  caret-color: #C7C7D4;
  border: none;
  resize: none;
  outline: none;
  margin: 10px 0;
  white-space: pre-wrap;
  word-break: keep-all;
  overflow-wrap: break-word;
}

.c1 {
  height: calc(100% - 10px);
  margin-bottom: 0;
  white-space: pre-wrap;
  word-break: keep-all;
  overflow-wrap: break-word;
  overflow: auto;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="editor"
      height="200px"
      width="400px"
    >
      <pre
        class="c1 prism-code language-json"
      >
        <div
          class="c2 token-line"
          data-testid="line-0"
          style="color: rgb(154, 134, 253);"
        >
          <span
            class="c3"
          >
            1
          </span>
          <span
            data-testid="line-text-0"
          >
            <span
              class="token plain"
            >
              

            </span>
          </span>
        </div>
      </pre>
      <textarea
        class="c4"
        data-testid="input-text-undefined"
        spellcheck="false"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Form/Input Input Link 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #98989E;
  width: 15px;
  height: 15px;
}

.c5 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 svg {
  width: 15px;
  height: 15px;
}

.c1 {
  position: relative;
  height: 42px;
}

.c3 {
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #FFF;
  border-radius: 0;
  bottom: 0px;
  box-sizing: border-box;
  color: #F2F2F9;
  font-size: 14px;
  padding-bottom: 5px;
  position: absolute;
  width: 100%;
}

.c3:focus {
  border-bottom-color: #4E5FFF;
}

.c3:focus + .sc-jNnpgg {
  top: 0px;
}

.c3:disabled {
  color: #98989E;
  border-bottom-color: #98989E;
}

.c3:-webkit-autofill + .sc-jNnpgg {
  top: 0px;
}

.c0 {
  width: 200px;
  position: relative;
}

.c2 > input {
  background-color: rgb(44,44,46);
  height: 34px;
  border: none;
  border-radius: 4px;
  font-size: 12px;
  padding: 0 35px 0 15px;
}

.c6 {
  background-color: rgb(44,44,46);
  padding-left: 10px;
}

.c4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 8px;
  right: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="input-link-link"
    >
      <div
        class="c1 c2"
        data-testid="input-wrapper-link"
        type="text"
      >
        <input
          autocomplete="off"
          class="c3"
          data-testid="input-text-link"
          disabled=""
          id="input-text-link"
          name="link"
          type="text"
          value="https://charlescd.io"
        />
      </div>
      <a
        class="c4"
        href="https://charlescd.io"
        target="_blank"
      >
        <i
          class="c5 c6"
          color="dark"
          data-testid="icon-external-link"
        >
          <div>
            <div>
              <svg
                src="external-link"
              />
            </div>
          </div>
        </i>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Icon Icon 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <i
      class="c0"
      data-testid="icon-charles"
    >
      <div>
        <div>
          <svg
            src="charles"
          />
        </div>
      </div>
    </i>
  </div>
</div>
`;

exports[`Storyshots Components/Layer Layer 1`] = `
.c0 {
  -webkit-animation: 0.5s iHfShZ linear;
  animation: 0.5s iHfShZ linear;
  margin-top: 40px;
}

.c0:last-child {
  padding-bottom: 50px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      style="background-color: rgb(28, 28, 30); color: rgb(152, 152, 158); width: 200px; height: 100px; padding: 10px;"
    >
      <div
        class="c0"
      >
        my content inside Layer
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Link Link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #9D40FF;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <a
      class="c0"
      href="https://charlescd.io"
      target="_blank"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Menu Menu 1`] = `
.c0 {
  display: inline-block;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      style="padding: 10px; margin-bottom: 15px;"
    >
      <div
        class="c0"
      >
        <div
          class=""
        >
          Filter (click to see menu)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal/Default Default 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #98989E;
  width: 22px;
  height: 22px;
}

.c5 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 svg {
  width: 22px;
  height: 22px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c1 {
  background: #1C1C1E;
  width: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 3;
  opacity: 0.8;
}

.c2 {
  position: relative;
  width: auto;
  max-width: 500px;
  margin: 1.75rem auto;
  min-height: calc(100% - (1.75rem * 2));
}

.c3 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  background: rgb(44,44,46);
  z-index: 4;
  color: #F2F2F9;
  padding: 35px 41px 28px 40px;
  top: 15%;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  text-align: left;
  opacity: 1.2;
  border-radius: 4px;
}

.c6 {
  overflow-y: auto;
  max-height: 100vh;
}

.c4 {
  position: absolute;
  top: 15px;
  right: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="modal-default"
    >
      <div
        class="c1 modal-background"
      />
      <div
        class="c2 modal-dialog"
      >
        <div
          class="c3 modal-container"
        >
          <div
            class="c4"
          >
            <i
              class="c5"
              color="dark"
              data-testid="icon-cancel"
            >
              <div>
                <div>
                  <svg
                    src="cancel"
                  />
                </div>
              </div>
            </i>
          </div>
          <div
            class="c6 modal-content"
          >
            content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal/FullScreen FullScreen 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 18px;
  height: 18px;
}

.c3 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 svg {
  width: 18px;
  height: 18px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 4;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c2 {
  background: #48484A;
  height: 40px;
  width: 100%;
}

.c2 i {
  margin-top: 10px;
  margin-left: 15px;
  margin-right: 10px;
}

.c1 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  background: rgb(44,44,46);
  color: #F2F2F9;
  text-align: left;
  opacity: 1.2;
  border-radius: 4px;
  height: 100%;
  width: 100%;
}

.c4 {
  overflow-y: auto;
  max-height: 100vh;
  height: 100%;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="modal-default"
    >
      <div
        class="c1 modal-container"
      >
        <div
          class="c2"
        >
          <i
            class="c3"
            color="light"
            data-testid="icon-collapse"
          >
            <div>
              <div>
                <svg
                  src="collapse"
                />
              </div>
            </div>
          </i>
          <i
            class="c3"
            color="light"
            data-testid="icon-copy"
          >
            <div>
              <div>
                <svg
                  src="copy"
                />
              </div>
            </div>
          </i>
        </div>
        <div
          class="c4 modal-content"
        >
          content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal/Trigger Trigger 1`] = `
.c4 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 18px;
  font-weight: bold;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 18px;
}

.c10 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: #98989E;
  text-align: left;
  line-height: 12px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 22px;
  height: 22px;
  background: none;
  border: none;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  padding: 0;
}

.c3 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 svg {
  width: 22px;
  height: 22px;
}

.c8 {
  position: relative;
  background-color: #5C37CC;
  border: none;
  border-radius: 4px;
  color: #FFF;
  font-size: 10px;
  height: 40px;
  line-height: 40px;
  font-weight: bold;
  padding: 0 33px;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c8:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 {
  background: #1C1C1E;
  width: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 3;
  opacity: 0.8;
}

.c1 {
  position: fixed;
  display: flex-inline;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 4;
  top: 25%;
  left: calc(50% - 204px);
  padding: 11px 41px 28px 40px;
  text-align: left;
  background: rgb(44,44,46);
  width: 408px;
  min-height: 210px;
  box-sizing: border-box;
  border-radius: 6px;
  opacity: 1.2;
}

.c5 {
  text-align: left;
  margin-bottom: 0;
}

.c6 {
  margin: 20px 0 20px 0;
}

.c9 {
  cursor: pointer;
  padding: 5px;
  margin-top: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 160px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0.1rem solid #FFF;
  background-color: transparent;
}

.c9 span {
  color: #FFF;
}

.c2 {
  margin-left: 324px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class=""
      data-testid="modal-trigger"
    >
      <div
        class="c0 modal-background"
      />
      <div
        class="c1 modal-content"
      >
        <div
          class="c2"
        >
          <i
            class="c3"
            color="light"
            data-testid="icon-cancel-modal"
          >
            <div>
              <div>
                <svg
                  src="cancel"
                />
              </div>
            </div>
          </i>
        </div>
        <span
          class="c4 c5"
          color="light"
          font-size="18px"
          font-style="normal"
          role=""
        >
          Confirm?
        </span>
        <div
          class="c6"
        />
        <div
          class="c7 modal-buttons"
        >
          <button
            class="c8 c9 modal-button-dismiss"
            data-testid="button-default-dismiss"
            type="button"
          >
            <span
              class="c10"
              color="dark"
              font-size="12px"
              font-style="normal"
              role=""
            >
              cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal/Wizard Wizard 1`] = `
.c5 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 16px;
  font-weight: bold;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 16px;
}

.c8 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: #0A84FF;
  text-align: left;
  line-height: 14px;
}

.c14 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: bold;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 12px;
}

.c21 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 190px;
  height: 190px;
}

.c24 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c24 svg {
  width: 190px;
  height: 190px;
}

.c12 {
  border: none;
  background: #5C37CC;
  height: 50px;
  border-radius: 15px;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 9px 18px;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c12:hover {
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c12 > * + * {
  margin-left: 10px;
}

.c20 {
  position: relative;
  display: inline-block;
  width: 24px;
  height: 15px;
  background-color: #C7C7D4;
  border-radius: 23px;
  vertical-align: text-bottom;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.c20::before {
  content: '';
  position: absolute;
  left: 0;
  width: 20px;
  height: 11px;
  background-color: rgb(44,44,46);
  border-radius: 11px;
  -webkit-transform: translate3d(2px,2px,0) scale3d(1,1,1);
  -ms-transform: translate3d(2px,2px,0) scale3d(1,1,1);
  transform: translate3d(2px,2px,0) scale3d(1,1,1);
  -webkit-transition: all 0.25s linear;
  transition: all 0.25s linear;
}

.c20::after {
  content: '';
  position: absolute;
  left: 1px;
  top: 1px;
  width: 9px;
  height: 9px;
  background-color: #C7C7D4;
  border-radius: 11px;
  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c18 {
  display: none;
}

.c18:checked + .c19 {
  background-color: #5C37CC;
}

.c18:checked + .c19::before {
  -webkit-transform: translate3d(10px,2px,0) scale3d(0,0,0);
  -ms-transform: translate3d(10px,2px,0) scale3d(0,0,0);
  transform: translate3d(10px,2px,0) scale3d(0,0,0);
}

.c18:checked + .c19::after {
  -webkit-transform: translate3d(12px,2px,0);
  -ms-transform: translate3d(12px,2px,0);
  transform: translate3d(12px,2px,0);
}

.c15 {
  display: inline-block;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c15 > :last-child {
  margin-left: 5px;
}

.c15:active .c17:checked + .c19::after {
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
}

.c15:active .c19::after {
  width: 10px;
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 30px;
}

.c1 {
  background: #1C1C1E;
  width: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 3;
  opacity: 0.8;
}

.c2 {
  position: relative;
  width: auto;
  margin: 1.75rem auto;
  min-height: calc(100% - (1.75rem * 2));
}

.c3 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  z-index: 4;
  padding: 26px 21px 26px 30px;
  top: 15%;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  text-align: left;
  width: 784px;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: rgb(44,44,46);
  z-index: 4;
  padding: 26px 21px 26px 30px;
  text-align: left;
  width: 30%;
}

.c22 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 4;
  width: 70%;
}

.c25 {
  height: 32%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #3A3A3C;
  color: #F2F2F9;
  padding: 28px 52px 0 21px;
  text-align: left;
}

.c26 {
  margin-top: 15px;
}

.c23 {
  height: 68%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #64D2FF;
}

.c9 {
  color: #F2F2F9;
  margin-left: 9px;
}

.c11 {
  color: #98989E;
  margin-left: 0;
}

.c6 {
  margin-top: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1px;
  height: 15px;
  box-sizing: border-box;
  border-radius: 1.5px;
  background: #F2F2F9;
}

.c10 {
  display: none;
  width: 1px;
  height: 15px;
  box-sizing: border-box;
  border-radius: 1.5px;
  background: #F2F2F9;
}

.c16 {
  margin-top: 26px;
  -webkit-box-pack: normal;
  -webkit-justify-content: normal;
  -ms-flex-pack: normal;
  justify-content: normal;
}

.c16 > :last-child {
  margin-left: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="modal-wizard"
    >
      <div
        class="c1 modal-background"
      />
      <div
        class="c2 modal-dialog"
      >
        <div
          class="c3 modal-content"
        >
          <div
            class="c4 modal-sidemenu"
          >
            <span
              class="c5"
              color="light"
              font-size="16px"
              font-style="normal"
              role=""
            >
              Configure the workspace
            </span>
            <div
              class="c6"
              data-testid="modal-wizard-menu-item-welcome"
            >
              <div
                class="c7"
              />
              <span
                class="c8 c9"
                color="primary"
                font-size="14px"
                font-style="normal"
                role=""
              >
                Welcome
              </span>
            </div>
            <div
              class="c6"
              data-testid="modal-wizard-menu-item-user-group"
            >
              <div
                class="c10"
              />
              <span
                class="c8 c11"
                color="primary"
                font-size="14px"
                font-style="normal"
                role=""
              >
                User group
              </span>
            </div>
            <div
              class="c6"
              data-testid="modal-wizard-menu-item-registry"
            >
              <div
                class="c10"
              />
              <span
                class="c8 c11"
                color="primary"
                font-size="14px"
                font-style="normal"
                role=""
              >
                Registry
              </span>
            </div>
            <div
              class="c6"
              data-testid="modal-wizard-menu-item-cdConfig"
            >
              <div
                class="c10"
              />
              <span
                class="c8 c11"
                color="primary"
                font-size="14px"
                font-style="normal"
                role=""
              >
                Deployment configuration
              </span>
            </div>
            <div
              class="c6"
              data-testid="modal-wizard-menu-item-circle-matcher"
            >
              <div
                class="c10"
              />
              <span
                class="c8 c11"
                color="primary"
                font-size="14px"
                font-style="normal"
                role=""
              >
                Circle matcher
              </span>
            </div>
            <div
              class="c6"
              data-testid="modal-wizard-menu-item-metrics-provider"
            >
              <div
                class="c10"
              />
              <span
                class="c8 c11"
                color="primary"
                font-size="14px"
                font-style="normal"
                role=""
              >
                Metrics provider
              </span>
            </div>
            <button
              class="c12 c13"
              data-testid="button-iconRounded-next"
              type="button"
            >
              <span
                class="c14"
                color="light"
                font-size="12px"
                font-style="normal"
                role=""
              >
                Next
              </span>
            </button>
            <label
              class="c15 c16"
            >
              <input
                class="c17 c18"
                data-testid="switch-undefined"
                type="checkbox"
              />
              <i
                class="c19 c20"
              />
              <span
                class="c21"
                color="light"
                font-size="14px"
                font-style="normal"
                role=""
              >
                Don't show me again.
              </span>
            </label>
          </div>
          <div
            class="c22 modal-info"
            data-testid="modal-wizard-info-welcome"
          >
            <div
              class="c23"
            >
              <i
                class="c24 "
                data-testid="icon-empty-workspaces"
              >
                <div>
                  <div>
                    <svg
                      src="empty-workspaces"
                    />
                  </div>
                </div>
              </i>
            </div>
            <div
              class="c25"
            >
              <span
                class="c5 "
                color="light"
                font-size="16px"
                font-style="normal"
                role=""
              >
                Welcome!
              </span>
              <span
                class="c21 c26"
                color="light"
                font-size="14px"
                font-style="normal"
                role=""
              >
                To start using the workspace it is necessary to make some configurations. Click next and see the credentials we need to get started.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/RadioButtons Radio Buttons 1`] = `
.c5 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 10px;
  font-weight: normal;
  color: #98989E;
  text-align: left;
  line-height: 10px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #98989E;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > * + * {
  margin-left: 10px;
}

.c3 {
  padding: 12px 30px 12px 30px;
  border-radius: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
}

.c3 > * + * {
  margin-left: 5px;
}

.c1 {
  opacity: 0;
  width: 0;
  height: 0;
  position: absolute;
  pointer-events: none;
}

.c1:checked + .c2 {
  background-color: #5C37CC;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.c1:checked + .c2:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

.c1:checked + .c2 .,
.c1:checked + .c2 .sc-jXcxbT {
  color: #FFF;
}

.c1:not(:checked) + .c2 {
  background-color: rgb(44,44,46);
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.c1:not(:checked) + .c2:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

.c1:not(:checked) + .c2 .,
.c1:not(:checked) + .c2 .sc-jXcxbT {
  color: #98989E;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="radio-group-type"
    >
      <div
        class=""
      >
        <input
          class="c1"
          data-testid="radio-group-type-item-create"
          id="radio-group-type-item-create"
          name="type"
          type="radio"
          value="create"
        />
        <label
          class="c2 c3"
          for="radio-group-type-item-create"
          value="create"
        >
          <i
            class="c4 "
            color="dark"
            data-testid="icon-edit"
          >
            <div>
              <div>
                <svg
                  src="edit"
                />
              </div>
            </div>
          </i>
          <span
            class="c5"
            color="dark"
            font-size="10px"
            font-style="normal"
            role=""
          >
            Create Release
          </span>
        </label>
      </div>
      <div
        class=""
      >
        <input
          class="c1"
          data-testid="radio-group-type-item-search"
          id="radio-group-type-item-search"
          name="type"
          type="radio"
          value="search"
        />
        <label
          class="c2 c3"
          for="radio-group-type-item-search"
          value="search"
        >
          <i
            class="c4 "
            color="dark"
            data-testid="icon-search"
          >
            <div>
              <div>
                <svg
                  src="search"
                />
              </div>
            </div>
          </i>
          <span
            class="c5"
            color="dark"
            font-size="10px"
            font-style="normal"
            role=""
          >
            Search for existing releases
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Switch 1`] = `
.c5 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 24px;
  height: 15px;
  background-color: #C7C7D4;
  border-radius: 23px;
  vertical-align: text-bottom;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.c4::before {
  content: '';
  position: absolute;
  left: 0;
  width: 20px;
  height: 11px;
  background-color: rgb(44,44,46);
  border-radius: 11px;
  -webkit-transform: translate3d(2px,2px,0) scale3d(1,1,1);
  -ms-transform: translate3d(2px,2px,0) scale3d(1,1,1);
  transform: translate3d(2px,2px,0) scale3d(1,1,1);
  -webkit-transition: all 0.25s linear;
  transition: all 0.25s linear;
}

.c4::after {
  content: '';
  position: absolute;
  left: 1px;
  top: 1px;
  width: 9px;
  height: 9px;
  background-color: #C7C7D4;
  border-radius: 11px;
  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c2 {
  display: none;
}

.c2:checked + .c3 {
  background-color: #5C37CC;
}

.c2:checked + .c3::before {
  -webkit-transform: translate3d(10px,2px,0) scale3d(0,0,0);
  -ms-transform: translate3d(10px,2px,0) scale3d(0,0,0);
  transform: translate3d(10px,2px,0) scale3d(0,0,0);
}

.c2:checked + .c3::after {
  -webkit-transform: translate3d(12px,2px,0);
  -ms-transform: translate3d(12px,2px,0);
  transform: translate3d(12px,2px,0);
}

.c0 {
  display: inline-block;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > :last-child {
  margin-left: 5px;
}

.c0:active .c1:checked + .c3::after {
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
}

.c0:active .c3::after {
  width: 10px;
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <label
      class="c0"
    >
      <input
        class="c1 c2"
        data-testid="switch-undefined"
        type="checkbox"
      />
      <i
        class="c3 c4"
      />
      <span
        class="c5"
        color="light"
        font-size="14px"
        font-style="normal"
        role=""
      >
        Global
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Tab Panel Tab Panel 1`] = `
.c5 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 12px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  height: 41px;
  background-color: rgb(44,44,46);
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 660px;
  box-sizing: border-box;
  border-right: 1px solid rgb(44,44,46);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 10px;
  padding-right: 32px;
  padding-left: 32px;
  overflow: auto;
  height: calc(100vh - 90px);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > * + * {
  margin-left: 8px;
}

.c6 {
  width: 150px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c2 {
  color: #F2F2F9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 233px;
  height: 41px;
  box-sizing: border-box;
  padding-left: 31px;
  background-color: #3A3A3C;
}

.c2 > * + * {
  margin-left: auto;
  margin-right: 12px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <div
      class="c0"
      data-testid="tabpanel-Untitled"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <i
              class="c4"
              color="light"
              data-testid="icon-undefined"
            />
            <span
              class="c5 c6"
              color="light"
              font-size="12px"
              font-style="normal"
              role=""
            >
              Untitled
            </span>
          </div>
        </div>
      </div>
      <div
        class="c7 tabpanel-content"
      >
        Tab
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Text Text 1`] = `
.c0 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-weight: normal;
  color: #0A84FF;
  text-align: left;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div>
    <span
      class="c0"
      color="primary"
      font-style="normal"
      role=""
    >
      Text
    </span>
  </div>
</div>
`;
